# bark.rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  lib.rs  main.rs  my_errors.rs  my_types.rs  types.rs
src/types/: errors.rs
