[package]
name = "bark-cli"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "*"
serde = { version="*", features=["derive"] }
serde_json = "*"
hyper = { version="*", features=["client", "http1"]}
hyper-tls = "*"
tokio = { version="*", features=["full"]}
openssl = { version = "*", features = ["vendored"] }
base64 = "*"
urlencoding = "*"
