[package]
name = "bark"
version = "0.3.0"
edition = "2021"

authors = ["hairdo_payment0u@icloud.com"]
publish = false
description = "A bark client by Rust."
repository = "https://github.com/kc9vu/bark.rs"
readme = "README.md"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cli"
path = "bin/cli.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
openssl = { version = "0.10", features = [] }
percent-encoding = "2.3"

[profile.release]
lto = true
debug = false
strip = true
panic = "abort"
